rdo/app/rdo_console/trunk/test/syntax_error/syntax_error.smr
Образец_прихода_клиента.planning(time_now / 0 + Интервал_прихода(30))

Show_mode      = NoShow
Show_rate      = 3600.0

Terminate_if Time_now >= 12 * 7 * 60

